--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -27,7 +27,7 @@
           <div class="ui list inverted">
             <div class="item">
               <a class="item github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
-              <a class="item github-button" href="https://github.com/apispots/apispots-extension/issues" data-icon="octicon-issue-opened" aria-label="Issue apispots/apispots-extension on GitHub">Issue</a>
+              <a class="item github-button" href="https://github.com/apispots/apispots-extension/issues" data-icon="octicon-issue-opened" aria-label="Issue apispots/apispots-extension on GitHub">Report an issue</a>
             </div>
             <div class="item">
               <a href="https://twitter.com/apispots" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a>
