--- a/_includes/home/section-manifest.html
+++ b/_includes/home/section-manifest.html
@@ -1,83 +1,99 @@
-
 <div class="ui vertical stripe intro segment">
   <div class="ui stackable very relaxed center aligned grid container">
     <div class="row">
       <div class="twelve wide column">
         <h1 class="ui header">A Collection Of Human Friendly API Tools</h1>
         <p>
-          The API Spots project is a collection of tools for anyone interested
-          in discovering, exploring and interacting with APIs without the need for a
-          technology background.
+          The API Spots project is a collection of tools for anyone interested in discovering, exploring and interacting with APIs without the need for a technology background.
         </p>
       </div>
     </div>
   </div>
 
-  <h2 class="ui horizontal header divider">
-    <a href="#">The Manifest</a>
-  </h2>
 
-  <div class="stackable very relaxed ui grid container">
-
-    <div class="row">
-      <div class="seven wide column">
-        <h3 class="ui header">Embedded into your browser</h3>
-        <p>API Spots collective is distributed as a Chrome extension.</p>
-        <p>The browser is your workspace, so there is no need to keep switching between apps.</p>
-        <p>Discover, explore and interact with APIs contextually through your browser.</p>
-      </div>
-      <div class="nine wide column">
-        <img class="ui image medium" src="{{site.url}}/assets/images/home/chrome-extension.jpeg"/>
-      </div>
-    </div>
-
-    <div class="ui divider"></div>
-
-    <div class="row">
-      <div class="seven wide column">
-        <h3 class="ui header">A galaxy of data and possibilities</h3>
-        <p>APIs are the driving force of the Internet today.</p>
-        <p>Almost every online application we use has an API exposed that can provide direct access to a multitude of resources.</p>
-        <p>The importance of data interchange and service connectivity through APIs has driven to what is known as the API Economy.</p>
-      </div>
-      <div class="nine wide column">
-        <img class="ui image medium" src="{{site.url}}/assets/images/home/api-economy.jpeg"/>
-      </div>
-    </div>
-
-    <div class="ui divider"></div>
-
-    <div class="row">
-      <div class="seven wide column">
-        <h3 class="ui header">Open source technologies</h3>
-        <p>Built entirely on top of open source technologies and specifications.</p>
-        <p>Following the lead of top technology experts and supporting the open source community efforts.</p>
-        <p>Because together we can make an impact!</p>
-      </div>
-      <div class="nine wide column">
-        <img class="ui image medium" src="{{site.url}}/assets/images/home/open.jpeg"/>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-<div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-      <div class="center aligned row">
+  <div class="ui stripe community vertical segment">
+    <div class="ui two column center aligned divided very relaxed stackable grid container">
+      <div class="row">
         <div class="column">
-          <h3>"Application Programming Interfaces, also known as APIs"</h3>
+          <h2 class="ui icon header">
+          <img class="ui icon image" src="{{site.url}}/assets/images/home/chrome.svg">
+          Embedded into your browser
+        </h2>
           <p>
-            This new way of sharing data using the web is touching almost every aspect of our increasingly
-            digital lives, providing access to the bits and bytes that make our personal
-            and professional worlds go round.
+            The browser is the modern workspace. The API Spots tool suite is distributed as a Chrome extension and runs embedded into your browser providing you with contextual browsing facilities.
           </p>
+          <a class="ui large button" href="{{site.url}}/docs/intro/">How to install</a>
+        </div>
+        <div class="column">
+          <h2 class="ui icon header">
+          <img class="ui icon image" src="{{site.url}}/assets/images/home/computer.svg">
+          Focused on the not-so technical audience
+        </h2>
           <p>
-            <img src="{{site.url}}/assets/images/home/kinlane.png" class="ui avatar image"> <b>Kin Lane</b>
-            <a href="https://apievangelist.com/" target="_blank">The API Evangelist</a>
+            On the modern web APIs are the driving force of the Internet and even if you are not a developer you can still have access to important data and resources.
           </p>
+          <a class="ui large button" href="{{site.url}}/faq">Read more</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <h2 class="ui icon header">
+          <img class="ui icon image" src="{{site.url}}/assets/images/home/open.svg">
+          100% Open Source
+        </h2>
+          <p>
+            Built entirely on top of open source technologies and specifications. Following the lead of top technology experts and supporting the open source community efforts.
+          </p>
+          <a class="ui large button" href="{{site.url}}/faq/#opensource">Read more</a>
+        </div>
+        <div class="column">
+          <h2 class="ui icon header">
+          <img class="ui icon image" src="{{site.url}}/assets/images/home/powered.svg">
+          Powered by open industry standards
+        </h2>
+          <p>
+            The API Spots project is leveraging widely adopted industry
+            standards like the <a href="https://openapis.org" target="_blank">Open API</a> specification
+            ensuring interoperability with other tools.
+          </p>
+          <a class="ui large button" href="{{site.url}}/docs/openapis/">Read more</a>
         </div>
       </div>
     </div>
   </div>
+
+
+  <div class="ui alternate stripe vertical segment">
+    <div class="ui center aligned grid container">
+      <div class="column">
+        <h3 class="ui header">
+            Application Programming Interfaces, also known as APIs
+          </h3>
+        <p>
+          This new way of sharing data using the web is touching almost every aspect of our increasingly digital lives, providing access to the bits and bytes that make our personal and professional worlds go round.
+        </p>
+        <p>
+          <img src="{{site.url}}/assets/images/home/kinlane.png" class="ui avatar image"> <b>Kin Lane</b>
+          <a href="https://apievangelist.com/" target="_blank">The API Evangelist</a>
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+<div class="ui stripe vertical segment">
+  <div class="ui stackable center aligned grid container">
+    <div class="fourteen wide column">
+      <h1 class="ui icon header">
+        <img class="ui inline icon image" src="{{site.url}}/assets/images/home/twitter.svg">
+        Follow the API Spots on Twitter
+      </h1>
+      <div class="ui stackable center aligned vertically padded grid">
+        <div class="eight wide column">
+          <h3 class="ui header">Stay tuned with feature updates</h3>
+          <a href="https://twitter.com/apispots" data-size="large" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
