--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -10,6 +10,7 @@
             <a href="{{site.owner.linkedin}}" target="_blank" class="item"><i class="address card outline icon"></i> Author</a>
             <a href="mailto:{{site.owner.email}}" target="_blank" class="item"><i class="mail icon"></i> Contact</a>
             <a href="{{site.url}}/faq" class="item"><i class="question icon"></i> FAQ</a>
+            <a href="{{site.url}}/releases" class="item"><i class="cloud upload icon"></i> Releases</a>
           </div>
         </div>
         <div class="column">
