Added latest release notes

--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -8,6 +8,9 @@
   <a href="{{site.url}}/faq" class="item">
     FAQ
   </a>
+  <a href="{{site.url}}/releases" class="item">
+    Releases
+  </a>
   <div class="right menu">
     <a href="{{site.extension.download-url}}" target="_blank" class="item">
       <i class="blue download icon"></i> Download
