Switched releases to dynamic data and added latest release info

--- a/_includes/home/section-manifest.html
+++ b/_includes/home/section-manifest.html
@@ -17,7 +17,7 @@
         <div class="column">
           <h2 class="ui icon header">
           <img class="ui icon image" src="{{site.url}}/assets/images/home/chrome.svg">
-          Embedded into your browser
+          Embedded into your Chrome browser
         </h2>
           <p>
             The browser is the modern workspace. The API Spots tool suite is distributed as a Chrome extension and runs embedded into your browser providing you with contextual browsing facilities.
