--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+
+{% include ga.html %}
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
@@ -8,8 +11,6 @@
 
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
-
-
 
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
