enhancement: Changed logo and background

--- a/_includes/home/header-master.html
+++ b/_includes/home/header-master.html
@@ -4,6 +4,7 @@
     <h1 class="ui inverted header">
       The API Spots
     </h1>
+    <img class="ui centered image" src="{{site.url}}/assets/images/home/logo.png">
     <h2>APIs for Humans</h2>
     <a href="{{site.extension.download-url}}" target="_blank" class="ui huge inverted button">
       <i class="download icon"></i>  Download
