enhancement: Removed 'The' from title

--- a/_includes/home/header-master.html
+++ b/_includes/home/header-master.html
@@ -2,7 +2,7 @@
 
   <div class="ui text container">
     <h1 class="ui inverted header">
-      The API Spots
+      API Spots
     </h1>
     <img class="ui centered image" src="{{site.url}}/assets/images/home/logo.png">
     <h2>APIs for Humans</h2>
